feat: Enhance movie service DTO